clusters/prod/Apps/Media/joplin/config/joplin-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: joplin.${SECRET_INT_DOMAIN}
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-write-timeout: "600"
    hajimari.io/appName: joplin
    hajimari.io/icon: notebook-multiple
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - joplin.${SECRET_INT_DOMAIN}
     secretName: prod-joplin-${SECRET_INT_CERT_DOMAIN}
  rules:
    - host: "joplin.${SECRET_INT_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joplin
                port:
                  number: 22300
---
    apiVersion: cert-manager.io/v1
    kind: Certificate
    metadata:
      name: joplin.${SECRET_INT_DOMAIN}
      namespace: media
    spec:
      secretName: prod-joplin-${SECRET_INT_CERT_DOMAIN}
      issuerRef:
        name: letsencrypt-production
        kind: ClusterIssuer
      commonName: "joplin.${SECRET_INT_DOMAIN}"
      dnsNames:
      - "joplin.${SECRET_INT_DOMAIN}"
